# glomph-maze

./: .clang-format  .clang-tidy  .dev-notes.md  .next-session-prompt.md  .pre-commit-config.yaml  AGENTS.md  AUTHORS  BUILD_SYSTEM_FIX.md  CHANGELOG.md  CHANGELOG.md.old  CMAKE_SETUP.md  CMAKE_VS_MAKEFILE.md  CMakeLists.txt  CONTRIBUTING.md  CRUSH.md  GNUmakefile  INSTALL  LICENSE  Makefile  PLATFORM_ANALYSIS.md  QUICKSTART.md  README.md  REFACTORING_STATUS.md  ROADMAP.md  SIMPLIFICATION_PLAN.md  SUMMARY.md  TEST_RESULTS.md  TODO.technical  chr  config.status  fix_help.md  generate_changelog.sh  lvl  makefile.cp  pyproject.toml  spr  test_audio.sh
.cache/clangd/index/: config.c.0E7027504B86BBDF.idx  config.h.1079CE0D109F5C25.idx  game_state.c.E5EAFFD1CEF79B3C.idx  game_state.h.78C4932692E85C97.idx  getopt.h.60CA6FC63A227E51.idx  globals.h.321B9D701DC049CB.idx  guess.h.5284DEBC34588A1E.idx  input_state.c.BDC67EF7399071BD.idx  input_state.h.295B7FDBE4956715.idx  logic.c.ED83505BB0F43EF3.idx  maze_io.c.0BE79B8FEC64EFEE.idx  maze_state.h.01605C07E5E56749.idx  mygetopt.c.AD8513B08A3B14F8.idx  mygetopt.h.E42229D265495FFA.idx  render.c.4656DE837D0010A9.idx  render_state.c.FEEB0F3EC8D0ABFA.idx  render_state.h.43786F144EF9938B.idx  screen.c.F4BAFB178067690E.idx  screen.h.8EBDE3FF673413D8.idx  sprite_io.c.146EC0F3A9C0A4F7.idx  sprite_state.h.DB1C4CBF3E762689.idx  utils.c.CF6CFB490806F23C.idx  utils.h.8E8B3BAE9D319BA6.idx  utils.h.F80010D9B243F2AE.idx
.github/workflows/: ci.yml
assets/: LICENSE  README.md
docs/: ACKNOWLEDGMENTS.md  ANALYSIS.md  AUDIO_ANALYSIS.md  AUDIO_IMPLEMENTATION.md  AUDIO_RECOMMENDATION.md  C17_VERIFICATION.md  CMAKE_SETUP.md  Doxyfile  EXTRACTION_PLAN.md  LICENSE_HEADER_TEMPLATE.txt  MYMAN_ANALYSIS.md  MYMAN_CLEANUP_PHASE1.md  PHASE_0_SUMMARY.md  PHASE_5_STRATEGY.md  QUICKSTART.md  REFACTORING_STATUS.md  REFACTORING_STRATEGY.md  REFACTOR_PLAN.md  SIMPLIFICATION_SUMMARY.md  keyboard_platform_detection.md  language_analysis.md  python_packaging.md  ship_of_theseus.md
images/: README.md
inc/: globals.h
include/: game_state.h  globals.h  input_state.h  maze_state.h  render_state.h  sprite_state.h  utils.h
scripts/: README.md  bitmap4.py  generate_docs_script.sh  modernize_headers.sh  remove_feature_flags.py
src/: args.c  game_state.c  input_state.c  logic.c  main.c  maze_io.c  myman.c  render.c  render_state.c  utils.c  utils.c.bak2
src/core/: collision.c  collision.h  config.c  config.h  game_state.c  game_state.h
src/data/: maze_loader.c  maze_loader.h  variants.c  variants.h
src/game/: game_state.c
src/glomph/: __init__.py  entities.py  game.py  loaders.py  main.py  renderer.py  terminal.py
src/input/: controls.c  controls.h  keyboard.c  keyboard.h
src/render/: pager.c  pager.h  screen.c  screen.h  sprites.c  sprites.h
src/sprite/: sprite_io.c
tests/: __init__.py  test_loaders.py
utl/: asc2txt.py  bitmap2.py
